use therubyracer from master until is released
Thank you @koic for cowboyd/therubyracer#413 :bow:

--- a/sinatra-contrib/Gemfile
+++ b/sinatra-contrib/Gemfile
@@ -26,7 +26,8 @@ group :development, :test do
     gem 'yajl-ruby'
     # ref is a dependency of therubyracer
     gem 'ref'
-    gem 'therubyracer'
+    # use therubyracer from master until cowboyd/therubyracer#413 is released
+    gem 'therubyracer', :github => 'cowboyd/therubyracer'
   end
 
   gem 'multi_json'
