therubyracer (0.12.3) has been released :tada:

--- a/sinatra-contrib/Gemfile
+++ b/sinatra-contrib/Gemfile
@@ -27,8 +27,7 @@ group :development, :test do
     gem 'yajl-ruby'
     # ref is a dependency of therubyracer
     gem 'ref'
-    # use therubyracer from master until cowboyd/therubyracer#413 is released
-    gem 'therubyracer', :github => 'cowboyd/therubyracer'
+    gem 'therubyracer'
   end
 
   gem 'multi_json'
