[sinatra-contrib] Ignore decompile.rb while generating docs

--- a/sinatra-contrib/Rakefile
+++ b/sinatra-contrib/Rakefile
@@ -11,7 +11,7 @@ task(:default => :spec)
 namespace :doc do
   task :readmes do
     Dir.glob 'lib/sinatra/*.rb' do |file|
-      excluded_files = %w[lib/sinatra/contrib.rb lib/sinatra/capture.rb lib/sinatra/engine_tracking.rb]
+      excluded_files = %w[lib/sinatra/contrib.rb lib/sinatra/capture.rb lib/sinatra/decompile.rb lib/sinatra/engine_tracking.rb]
       next if excluded_files.include?(file)
       doc  = File.read(file)[/^module Sinatra(\n)+(  #[^\n]*\n)*/m].scan(/^ *#(?!#) ?(.*)\n/).join("\n")
       file = "doc/#{file[4..-4].tr("/_", "-")}.rdoc"
