Add jruby-9.1.12.0 to allow_failures
At least until @headius takes a break from dark souls to fix it :p

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ matrix:
   allow_failures:
     - rvm: ruby-head
     - rvm: jruby-head
+    - rvm: jruby-9.1.12.0
     - rvm: rbx
 
 notifications:
