--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ rvm:
   - 2.3.4
   - 2.4.1
   - ruby-head
-  - rbx
+  - rbx-3
   - jruby-9.1.12.0
   - jruby-head
 
@@ -32,7 +32,7 @@ matrix:
     - rvm: ruby-head
     - rvm: jruby-head
     - rvm: jruby-9.1.12.0
-    - rvm: rbx
+    - rvm: rbx-3
 
 notifications:
   slack:
