Style/SingleLineMethods: temporary disable
It breaks layout of the code, it is better to fix it manually

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,3 +14,7 @@ AllCops:
     - 'test/**/*'
     - 'rack-protection/**/*'
     - 'sinatra-contrib/**/*'
+
+# Temporary allow single line methods
+Style/SingleLineMethods:
+  Enabled: false
