--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,3 +18,6 @@ AllCops:
 # Temporary allow single line methods
 Style/SingleLineMethods:
   Enabled: false
+
+Lint/AmbiguousBlockAssociation:
+  Enabled: false
