Layout/ExtraSpacing: allow for alignment

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -30,3 +30,7 @@ Style/PerlBackrefs:
 
 Style/Documentation:
   Enabled: false
+
+Layout/ExtraSpacing:
+  AllowForAlignment: true
+  AllowBeforeTrailingComments: true
