Lint/IneffectiveAccessModifier: disable cop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -34,3 +34,6 @@ Style/Documentation:
 Layout/ExtraSpacing:
   AllowForAlignment: true
   AllowBeforeTrailingComments: true
+
+Lint/IneffectiveAccessModifier:
+  Enabled: false
