--- a/sinatra-contrib/Gemfile
+++ b/sinatra-contrib/Gemfile
@@ -16,8 +16,9 @@ group :development, :test do
   end
 
   platform :jruby, :ruby do
-    gem 'slim', '2.1.0'
+    gem 'hamlit', '>= 2.10.1'
     gem 'liquid', '~> 2.6.x'
+    gem 'slim'
   end
 
   platform :ruby do
