--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 ---
 language: ruby
 
-dist: trusty
+dist: xenial
 
 before_install:
   - gem install bundler
@@ -20,14 +20,14 @@ rvm:
   - 2.5.8
   - 2.6.6
   - 2.7.1
-  - jruby-9.2.12.0
+  - 3.0.0
+  - jruby-9.2.14.0
 
 script: ./.travis.sh
 
 matrix:
   allow_failures:
-    - rvm: 2.6.6
-    - rvm: jruby-9.2.12.0
+    - rvm: jruby-9.2.14.0
 
 notifications:
   slack:
