Skip the Slack action if `secrets.SLACK_WEBHOOK` isn't set
Since forks do not have access to the `SLACK_WEBHOOK` secret, this step would always fail.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,4 +39,4 @@ jobs:
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }} # required
         MATRIX_CONTEXT: ${{ toJson(matrix) }} # required
-      if: failure()
+      if: failure() && env.SLACK_WEBHOOK_URL
