--- a/sinatra-contrib/Gemfile
+++ b/sinatra-contrib/Gemfile
@@ -28,8 +28,8 @@ group :development, :test do
     gem 'redcarpet', '2.3.0'
     gem 'yajl-ruby'
     # ref is a dependency of therubyracer
-    gem 'ref'
-    gem 'therubyracer'
+    gem 'ref' if RUBY_VERSION < '3.1.0'
+    gem 'therubyracer' if RUBY_VERSION < '3.1.0'
   end
 
   gem 'multi_json'
