--- a/rack-protection/Rakefile
+++ b/rack-protection/Rakefile
@@ -1,5 +1,5 @@
 # encoding: utf-8
-$LOAD_PATH.unshift File.expand_path('../lib', __FILE__)
+$LOAD_PATH.unshift File.expand_path('lib', __dir__)
 
 begin
   require 'bundler'
