--- a/sinatra-contrib/Rakefile
+++ b/sinatra-contrib/Rakefile
@@ -1,4 +1,4 @@
-$LOAD_PATH.unshift File.expand_path('../lib', __FILE__)
+$LOAD_PATH.unshift File.expand_path('lib', __dir__)
 require 'open-uri'
 require 'yaml'
 require 'sinatra/contrib/version'
