--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,8 +24,18 @@ jobs:
         bundler-cache: true
     - name: Install dependencies
       run: sudo apt-get install -y pandoc nodejs pkg-config libxml2-dev libxslt-dev
-    - name: Run tests
-      run: ./.actions.sh
+    - name: Run sinatra tests
+      run: bundle exec rake
+    - name: Run sinatra-contrib tests
+      run: |
+        cd $GITHUB_WORKSPACE/sinatra-contrib
+        bundle install --jobs=3 --retry=3
+        bundle exec rake
+    - name: Run rack-protection tests
+      run: |
+        cd $GITHUB_WORKSPACE/rack-protection
+        bundle install --jobs=3 --retry=3
+        bundle exec rake
     - uses: 8398a7/action-slack@v3
       with:
         status: ${{ job.status }}
