--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,9 @@ jobs:
         ruby: [2.6, 2.7, '3.0', 3.1, 'jruby-9.3']
         include:
           - { ruby: 3.1, rack: master, allow-failure: true }
+          - { ruby: jruby-head, allow-failure: true }
+          - { ruby: truffleruby-22, allow-failure: true }
+          - { ruby: truffleruby-head, allow-failure: true }
     env:
       rack: ${{ matrix.rack }}
     steps:
