--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         # Due to https://github.com/actions/runner/issues/849, we have to use quotes for '3.0'
-        ruby: [2.6, 2.7, '3.0', 3.1, 'jruby-9.3']
+        ruby: [2.6, 2.7, '3.0', 'jruby-9.3']
     steps:
     - uses: actions/checkout@v2
     - uses: ruby/setup-ruby@v1
