--- a/sinatra-contrib/Gemfile
+++ b/sinatra-contrib/Gemfile
@@ -4,6 +4,8 @@ gemspec
 gem 'sinatra', path: '..'
 gem 'rack-protection', path: '../rack-protection'
 
+gem 'rack-test', github: 'rack/rack-test'
+
 group :development, :test do
   platform :jruby do
     gem 'json'
