Rubocop updates for rack-protection and sinatra-contrib

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -139,3 +139,9 @@ Style/DocumentDynamicEvalDefinition:
 
 Lint/ToEnumArguments:
   Enabled: false
+
+Naming/MethodParameterName:
+  Enabled: false
+
+Naming/AccessorMethodName:
+  Enabled: false
