--- a/sinatra-contrib/Gemfile
+++ b/sinatra-contrib/Gemfile
@@ -1,8 +1,10 @@
-source "https://rubygems.org"
+# frozen_string_literal: true
+
+source 'https://rubygems.org'
 gemspec
 
-gem 'sinatra', path: '..'
 gem 'rack-protection', path: '../rack-protection'
+gem 'sinatra', path: '..'
 
 gem 'rack-test', github: 'rack/rack-test'
 
@@ -36,6 +38,6 @@ repos = { 'tilt' => 'rtomayko/tilt', 'rack' => 'rack/rack' }
 %w[tilt rack].each do |lib|
   dep = (ENV[lib] || 'stable').sub "#{lib}-", ''
   dep = nil if dep == 'stable'
-  dep = {:github => repos[lib], :branch => dep} if dep and dep !~ /(\d+\.)+\d+/
+  dep = { github: repos[lib], branch: dep } if dep && dep !~ (/(\d+\.)+\d+/)
   gem lib, dep if dep
 end
