--- a/sinatra-contrib/Rakefile
+++ b/sinatra-contrib/Rakefile
@@ -1,12 +1,14 @@
+# frozen_string_literal: true
+
 $LOAD_PATH.unshift File.expand_path('lib', __dir__)
 require 'open-uri'
 require 'yaml'
 require 'sinatra/contrib/version'
 
-desc "run specs"
+desc 'run specs'
 task(:spec) { ruby '-S rspec' }
-task(:test => :spec)
-task(:default => :spec)
+task(test: :spec)
+task(default: :spec)
 
 namespace :doc do
   task :readmes do
@@ -14,36 +16,37 @@ namespace :doc do
       puts "Trying file... #{file}"
       excluded_files = %w[lib/sinatra/contrib.rb lib/sinatra/decompile.rb]
       next if excluded_files.include?(file)
+
       doc  = File.read(file)[/^module Sinatra(\n)+(  #[^\n]*\n)*/m].scan(/^ *#(?!#) ?(.*)\n/).join("\n")
-      file = "doc/#{file[4..-4].tr("/_", "-")}.rdoc"
-      Dir.mkdir "doc" unless File.directory? "doc"
+      file = "doc/#{file[4..-4].tr('/_', '-')}.rdoc"
+      Dir.mkdir 'doc' unless File.directory? 'doc'
       puts "writing #{file}"
-      File.open(file, "w") { |f| f << doc }
+      File.open(file, 'w') { |f| f << doc }
     end
   end
 
   task :index do
-    doc = File.read("README.md")
-    file = "doc/sinatra-contrib-readme.md"
-    Dir.mkdir "doc" unless File.directory? "doc"
+    doc = File.read('README.md')
+    file = 'doc/sinatra-contrib-readme.md'
+    Dir.mkdir 'doc' unless File.directory? 'doc'
     puts "writing #{file}"
-    File.open(file, "w") { |f| f << doc }
+    File.open(file, 'w') { |f| f << doc }
   end
 
-  task :all => [:readmes, :index]
+  task all: %i[readmes index]
 end
 
-desc "generate documentation"
-task :doc => 'doc:all'
+desc 'generate documentation'
+task doc: 'doc:all'
 
-desc "generate gemspec"
+desc 'generate gemspec'
 task 'sinatra-contrib.gemspec' do
   content = File.read 'sinatra-contrib.gemspec'
 
   fields = {
-    :authors => `git shortlog -sn`.scan(/[^\d\s].*/),
-    :email   => `git shortlog -sne`.scan(/[^<]+@[^>]+/),
-    :files   => `git ls-files`.split("\n").reject { |f| f =~ /^(\.|Gemfile)/ }
+    authors: `git shortlog -sn`.scan(/[^\d\s].*/),
+    email: `git shortlog -sne`.scan(/[^<]+@[^>]+/),
+    files: `git ls-files`.split("\n").grep_v(/^(\.|Gemfile)/)
   }
 
   fields.each do |field, values|
@@ -56,9 +59,9 @@ task 'sinatra-contrib.gemspec' do
   File.open('sinatra-contrib.gemspec', 'w') { |f| f << content }
 end
 
-task :gemspec => 'sinatra-contrib.gemspec'
+task gemspec: 'sinatra-contrib.gemspec'
 
-task :release => :gemspec do
+task release: :gemspec do
   sh <<-SH
     rm -Rf sinatra-contrib*.gem &&
     gem build sinatra-contrib.gemspec &&
@@ -70,4 +73,3 @@ task :release => :gemspec do
     git push --tags && (git push origin --tags || true)
   SH
 end
-
