Pin jar-dependencies to 0.4.1
Fix JRuby CI error. Should be able to remove once JRuby is updated.

--- a/sinatra-contrib/Gemfile
+++ b/sinatra-contrib/Gemfile
@@ -13,6 +13,7 @@ group :development, :test do
     gem 'json'
     gem 'rdoc'
     gem 'therubyrhino'
+    gem 'jar-dependencies', '= 0.4.1' # Gem::LoadError with jar-dependencies 0.4.2
   end
 
   platform :jruby, :ruby do
