--- a/sinatra-contrib/Gemfile
+++ b/sinatra-contrib/Gemfile
@@ -16,8 +16,7 @@ group :development, :test do
   end
 
   platform :jruby, :ruby do
-    gem 'hamlit'
-    gem 'hamlit-block', '>= 0.7.1'
+    gem 'hamlit', '~> 3'
     gem 'liquid', '~> 2.6.x'
     gem 'slim'
   end
