--- a/sinatra-contrib/Gemfile
+++ b/sinatra-contrib/Gemfile
@@ -6,8 +6,6 @@ gemspec
 gem 'rack-protection', path: '../rack-protection'
 gem 'sinatra', path: '..'
 
-gem 'rack-test', github: 'rack/rack-test'
-
 group :development, :test do
   platform :jruby do
     gem 'json'
@@ -38,6 +36,6 @@ repos = { 'tilt' => 'rtomayko/tilt', 'rack' => 'rack/rack' }
 %w[tilt rack].each do |lib|
   dep = (ENV[lib] || 'stable').sub "#{lib}-", ''
   dep = nil if dep == 'stable'
-  dep = { github: repos[lib], branch: dep } if dep && dep !~ (/(\d+\.)+\d+/)
+  dep = { github: repos[lib], branch: dep } if dep && dep !~ (/(\d+\.?)+(\d+)?/)
   gem lib, dep if dep
 end
