--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   test:
-    name: ${{ matrix.ruby }} (Rack ${{ matrix.rack }}, Puma ${{ matrix.puma }}) ${{ matrix.gemfile }}
+    name: ${{ matrix.ruby }} (Rack ${{ matrix.rack }}, Puma ${{ matrix.puma }})
     permissions:
       contents: read #  to fetch code (actions/checkout)
       actions: read #  to list jobs for workflow run (8398a7/action-slack)
@@ -29,14 +29,11 @@ jobs:
         include:
           - { ruby: 2.6, rack: '~> 2', puma: '~> 5' }
           - { ruby: 3.2, rack: '~> 2', puma: '~> 5' }
-          - { ruby: 3.1, rack: stable, puma: stable, gemfile: gems/rack-v3.rb, allow-failure: true }
-          - { ruby: 3.1, rack: latest, puma: latest, gemfile: gems/rack-v3.rb, allow-failure: true }
-          - { ruby: jruby-head, rack: stable, puma: stable, gemfile: gems/rack-v3.rb, allow-failure: true }
+          - { ruby: 3.2, rack: '~> 2', puma: latest }
+          - { ruby: jruby-head, rack: '~> 2', puma: stable, allow-failure: true }
     env:
       rack: ${{ matrix.rack }}
       puma: ${{ matrix.puma }}
-      BUNDLE_GEMFILE: ${{ matrix.gemfile }}
-
     steps:
     - name: Install dependencies
       run: |
