CI: add jobs for Rack 2, Puma 5 and Ruby 3.2
- Include gemfile in job name
  To be able to tell the difference without opening each job.

- Avoid exact versions in sinatra-contrib/Gemfile
  Introduced in a1722ca
  Nokogiri 1.13.6 can't be installed on Ruby 3.2:
  https://github.com/sinatra/sinatra/actions/runs/3793184348/jobs/6450054080#step:6:14

--- a/sinatra-contrib/Gemfile
+++ b/sinatra-contrib/Gemfile
@@ -21,9 +21,9 @@ group :development, :test do
   end
 
   platform :ruby do
-    gem 'execjs', '2.0.0'
-    gem 'nokogiri', '1.13.6'
-    gem 'redcarpet', '3.5.1'
+    gem 'execjs', '>= 2.0.0'
+    gem 'nokogiri', '>= 1.13.6'
+    gem 'redcarpet', '>= 3.5.1'
     gem 'yajl-ruby'
   end
 
