--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
         rack:
           - '~> 2'
         # Due to https://github.com/actions/runner/issues/849, we have to use quotes for '3.0'
-        ruby: [2.6, 2.7, '3.0', 3.1, 3.2, 'jruby-9.3', truffleruby]
+        ruby: [2.6, 2.7, '3.0', 3.1, 3.2, 'jruby-9.3', 'jruby-9.4', truffleruby]
         include:
           - { ruby: 2.6, rack: '~> 2', puma: '~> 5' }
           - { ruby: 3.2, rack: '~> 2', puma: '~> 5' }
