Restore `continue-on-error`
Revert "Run tests for sinatra-contrib and rack-protection"

This reverts commit 13b5b0f9c375fbfe6afdb3e19533fbf5bb1dbc32.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -115,12 +115,12 @@ jobs:
         rubygems: ${{ matrix.ruby == '3.0' && 'latest' || 'default' }}
 
     - name: Run sinatra tests
-      continue-on-error: true
+      continue-on-error: ${{ matrix.allow-failure || false }}
       id: tests
       run: bundle exec rake
 
     - name: Run sinatra-contrib tests
-      continue-on-error: true
+      continue-on-error: ${{ matrix.allow-failure || false }}
       id: contrib-tests
       working-directory: sinatra-contrib
       run: |
