Forgot the `env` :)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,6 +48,7 @@ jobs:
     env:
       rack: ${{ matrix.rack }}
       puma: ${{ matrix.puma }}
+      tilt: ${{ matrix.tilt }}
     steps:
     - name: Install dependencies
       run: |
