CI: handle dependencies the same way, add Tilt to the matrix (#1881)
Adds Tilt (https://rubygems.org/gems/tilt) to the CI matrix. It now
resides at https://github.com/jeremyevans/tilt

Changes `latest` to `head` because "latest" sounds a lot like "latest
release" but we mean using the main/master branch of the repo of the
dependency we test with. Matches `ruby-head`.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   test:
-    name: ${{ matrix.ruby }} (Rack ${{ matrix.rack }}, Puma ${{ matrix.puma }})
+    name: ${{ matrix.ruby }} (Rack ${{ matrix.rack }}, Puma ${{ matrix.puma }}, Tilt ${{ matrix.tilt }})
     permissions:
       contents: read #  to fetch code (actions/checkout)
       actions: read #  to list jobs for workflow run (8398a7/action-slack)
@@ -24,23 +24,30 @@ jobs:
           - stable
         rack:
           - '~> 2'
+        tilt:
+          - '~> 2.0.0'
         # Due to https://github.com/actions/runner/issues/849, we have to use quotes for '3.0'
         ruby: [2.6, 2.7, '3.0', 3.1, 3.2, truffleruby]
         include:
-          - { ruby: 2.6, rack: '~> 2', puma: '~> 5' }
-          - { ruby: 3.2, rack: '~> 2', puma: '~> 5' }
-          - { ruby: 3.2, rack: '~> 2', puma: latest }
+          # Puma
+          - { ruby: 3.1, rack: '~> 2', puma: '~> 5',   tilt: '~> 2.0.0' }
+          - { ruby: 3.2, rack: '~> 2', puma: '~> 6.0', tilt: '~> 2.0.0' }
+          - { ruby: 3.2, rack: '~> 2', puma: head,     tilt: '~> 2.0.0', allow-failure: true }
+          # Tilt
+          - { ruby: 3.1, rack: '~> 2', puma: stable,   tilt: '~> 2',     allow-failure: true }
+          - { ruby: 3.2, rack: '~> 2', puma: stable,   tilt: head,       allow-failure: true }
           # Due to flaky tests, see https://github.com/sinatra/sinatra/pull/1870
-          - { ruby: jruby-9.3, rack: '~> 2', puma: stable, allow-failure: true }
+          - { ruby: jruby-9.3, rack: '~> 2', puma: stable, tilt: '~> 2.0.0', allow-failure: true }
           # Due to https://github.com/jruby/jruby/issues/7647
-          - { ruby: jruby-9.4, rack: '~> 2', puma: stable, allow-failure: true }
+          - { ruby: jruby-9.4, rack: '~> 2', puma: stable, tilt: '~> 2.0.0', allow-failure: true }
           # Never fail our build due to problems with head
-          - { ruby: ruby-head, rack: '~> 2', puma: stable, allow-failure: true }
-          - { ruby: jruby-head, rack: '~> 2', puma: stable, allow-failure: true }
-          - { ruby: truffleruby-head, rack: '~> 2', puma: stable, allow-failure: true }
+          - { ruby: ruby-head,        rack: '~> 2', puma: stable, tilt: '~> 2.0.0', allow-failure: true }
+          - { ruby: jruby-head,       rack: '~> 2', puma: stable, tilt: '~> 2.0.0', allow-failure: true }
+          - { ruby: truffleruby-head, rack: '~> 2', puma: stable, tilt: '~> 2.0.0', allow-failure: true }
     env:
       rack: ${{ matrix.rack }}
       puma: ${{ matrix.puma }}
+      tilt: ${{ matrix.tilt }}
     steps:
     - name: Install dependencies
       run: |
