Manage development dependencies with `Gemfile`s

--- a/sinatra-contrib/Gemfile
+++ b/sinatra-contrib/Gemfile
@@ -26,7 +26,6 @@ group :development, :test do
 
   platform :ruby do
     gem 'execjs', '>= 2.0.0'
-    gem 'nokogiri', '>= 1.13.6'
     gem 'redcarpet', '>= 3.5.1'
     gem 'yajl-ruby'
   end
@@ -43,3 +42,13 @@ tilt_version = ENV['tilt'].to_s
 tilt_version = nil if tilt_version.empty? || (tilt_version == 'stable')
 tilt_version = { github: 'jeremyevans/tilt' } if tilt_version == 'head'
 gem 'tilt', tilt_version
+
+gem 'asciidoctor'
+gem 'builder'
+gem 'erubi'
+gem 'haml'
+gem 'markaby'
+gem 'nokogiri', '>= 1.13.6'
+gem 'rake', '>= 12.3.3'
+gem 'rspec', '~> 3'
+gem 'sass-embedded', '~> 1.54'
