--- a/rack-protection/Gemfile
+++ b/rack-protection/Gemfile
@@ -4,6 +4,7 @@ source 'https://rubygems.org'
 # encoding: utf-8
 
 gem 'rake'
+gem 'rspec', '~> 3'
 
 rack_version = ENV['rack'].to_s
 rack_version = nil if rack_version.empty? || (rack_version == 'stable')
