CI: Ensure up-to-date apt sources

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,6 +49,7 @@ jobs:
     steps:
     - name: Install dependencies
       run: |
+        sudo apt-get update
         sudo apt-get install --yes \
           pandoc \
           nodejs \
