Ruby 3.3 + Bundler 2.5 compatibility
Sinatra needs to account for the bundled gems warning system. Probably
since https://github.com/ruby/ruby/pull/9148.

Add test for classic app using Zeitwerk, as it was so similar and none
was added in https://github.com/sinatra/sinatra/pull/1831.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -71,7 +71,7 @@ jobs:
         tilt:
           - stable
         # Due to https://github.com/actions/runner/issues/849, we have to use quotes for '3.0'
-        ruby: [2.6, 2.7, '3.0', 3.1, 3.2, truffleruby]
+        ruby: [2.6, 2.7, '3.0', 3.1, 3.2, 3.3, truffleruby]
         include:
           # Puma
           - { ruby: 3.1, rack: '~> 2', puma: '~> 5',   tilt: stable }
