Test rack-protection with rack main branch
This was the intention with https://github.com/sinatra/sinatra/pull/1974
but I must have forgot about it.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,9 @@ jobs:
           - "jruby"
           - "truffleruby"
           - "ruby-head"
+        include:
+          # Rack
+          - { ruby: 3.2, rack: head }
     env:
       rack: ${{ matrix.rack }}
     steps:
