CI: make more jobs use Rack 3.0 for now

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
           - { ruby: 3.2, rack: "~>3.1.0" }
           - { ruby: 3.2, rack: head }
           # Never fail our build due to problems with Ruby head
-          - { ruby: ruby-head, rack: stable, allow-failure: true }
+          - { ruby: ruby-head, rack: "~>3.0.0", allow-failure: true }
     env:
       rack: ${{ matrix.rack }}
     steps:
@@ -97,11 +97,11 @@ jobs:
           # Tilt
           - { ruby: 3.2, rack: "~>3.0.0", puma: stable,   tilt: head,   rack_session: stable }
           # Never fail our build due to problems with head rubies
-          - { ruby: ruby-head,        rack: stable, puma: stable, tilt: stable, rack_session: stable, allow-failure: true }
-          - { ruby: jruby-head,       rack: stable, puma: stable, tilt: stable, rack_session: stable, allow-failure: true }
-          - { ruby: truffleruby-head, rack: stable, puma: stable, tilt: stable, rack_session: stable, allow-failure: true }
+          - { ruby: ruby-head,        rack: "~>3.0.0", puma: stable, tilt: stable, rack_session: stable, allow-failure: true }
+          - { ruby: jruby-head,       rack: "~>3.0.0", puma: stable, tilt: stable, rack_session: stable, allow-failure: true }
+          - { ruby: truffleruby-head, rack: "~>3.0.0", puma: stable, tilt: stable, rack_session: stable, allow-failure: true }
           # truffleruby 24 fails, see https://github.com/sinatra/sinatra/issues/2007
-          - { ruby: truffleruby,      rack: stable, puma: stable, tilt: stable, rack_session: stable, allow-failure: true }
+          - { ruby: truffleruby,      rack: "~>3.0.0", puma: stable, tilt: stable, rack_session: stable, allow-failure: true }
 
     env:
       rack: ${{ matrix.rack }}
